# PCViewer

./: .gitignore  AGENTS.md  LICENSE  config.ini  config.yaml  configs.py  designer.qrc  designer_rc.py  index.html  main.py  path.py  pyproject.toml  readme.md  requirements.txt  sam2.py  setup.py  test.py  utils.py
.github/workflows/: release.yml
app/: app.py  configs.py  mode.py
docs/: install.md  use.md
models/: medsam2.py  sam2.py
scripts/: PET2SUV.py  __init__.py  basic.py  logger.py  preprocess.py  sort_dcm.py  sort_dicom.py  sort_ima.py  theme.py
stylesheet/: dark.qss  light.qss
ui/: DLDock.ui  DLDock_ui.py  FileDock.ui  FileDock_ui.py  ImageDock.ui  ImageDock_ui.py  LoadDialog.ui  LoadDialog_ui.py  MainWindow.ui  MainWindow_ui.py  SamDock.ui  SamDock_ui.py  SegmentDock.ui  SegmentDock_ui.py  ShortcutDialog.ui  ShortcutDialog_ui.py  __init__.py
widgets/: 1.py  DLDocker.py  FileDocker.py  ImageDocker.py  ImageViewer.py  InfoDocker.py  LoadDialog.py  MainWindow.py  PredictThread.py  SamDocker.py  SegmentDocker.py  ShortcutDialog.py  WorkerThread.py  __init__.py  lutExample.py
