[tool.poetry]
name = "viewer"
version = "0.1.0"
description = "鼻咽癌PET/CT图像全身病灶检测软件"
authors = ["Jinfr <2998747137@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PySide6 = "^6.9.1"
numpy = "^1.26.0"
opencv-python = "^4.8.0"
onnxruntime = "^1.16.0"
pydicom = "^2.4.3"
pandas = "^2.1.0"
pypinyin = "^0.49.0"
SimpleITK = "^2.3.0"
vtk = "^9.2.6"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
