[project]
name = "Viewer"
version = "0.1.0"
description = "基于SAM2的PET/CT图像全身病灶分割软件"
authors = [
    { name="Jinfr"}
]
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.9.1",
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "onnxruntime>=1.16.0",
    "pydicom>=2.4.3",
    "pypinyin>=0.49.0",
    "SimpleITK>=2.3.0",
    "vtk>=9.2.6",
    "pyyaml>=6.0.1",
    "nuitka==4.0",
]
